# nv-malpractice-explorer

./: .env.example  .gitignore  CLAUDE.md  README.md  SETTLEMENT_GAP_REMEDIATION.md  app.py  main.py  pyproject.toml  test_aggregate.py  test_scraper.py
data/: filings.json  filings_normalized.json  ocr_results.json  test_2025.json
docs/: exploration-questions.md
scripts/: aggregate_cases.py  build_cases_summary.py  clean_text.py  migrate_settlements.py  ocr_pdfs.py  process_complaints.py  process_new_filings.py  process_settlements.py  process_single_file.py  scraper.py
scripts/batch/: normalize_filings.py  ocr_pdfs.py  process_complaints.py  reprocess_amended_complaints.py
scripts/prompts/: amendment_comparison.md  complaint_extraction.md  settlement_extraction.md
scripts/utils/: add_resolution_outcome.py  build_cases_summary.py  create_indexes.py  validate_filings.py
static/: index.html
static/css/: styles.css
text/2008/: 05-9441-01_Settlement__Waiver_and_Consent.txt  06-10439-1_Settlement__Waiver_and_Consent.txt  06-10450-1_Settlement__Waiver_and_Consent.txt  06-11489-1_Order.txt  06-18554-1_Order.txt  07-11047-1_Settlement__Waiver_and_Consent.txt  07-12232-1_First_Amended_Complaint.txt  07-19008-1_Findings_of_Fact__Conclusions_.txt  07-20873-1_Findings_of_Fact__Conclusions_.txt  07-20873-1_Settlement__Waiver_and_Consent.txt  07-23881-01_Settlement__Waiver_and_Consent.txt  07-26329-1_Findings_of_Fact__Conclusions_.txt  07-31239-1_Findings_of_Fact__Conclusions_.txt  07-7759-1_Complaint.txt  07-7759-1_Settlement__Waiver_and_Consent.txt  (+31 more)
(+1492 files in other folders)
