[project]
name = "malpractice-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "openai>=2.14.0",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
